css dateien wurden geändert

--- a/Sopra/WebContent/WEB-INF/templates/AdminTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/AdminTemplate.xhtml
@@ -22,10 +22,22 @@
     </ui:insert>
 </div>
 
-<div id="content">	
-			<ui:insert name="seitenbereich">
-	 		</ui:insert>
-			</div>	
+<div id="content">
+			<div id = "seitenbereich">
+				<div id='cssmenuAdmin'>
+					<ul>
+					   <li class='active'><a href='#'>Modul betrachten</a></li>
+					   <li><a href='#'>Modulhandbuch</a></li>
+					   <li><a href='#'>Modul suchen</a></li>
+					   <li><a href='#'>Benutzer anlegen</a></li>
+					   <li><a href='#'>Benutzer löschen</a></li>
+					   <li><a href='#'>Rechteverwaltung</a></li>
+					</ul>
+				</div>
+			</div>
+		<ui:insert name="seitenbereich">
+ 		</ui:insert>
+</div>
 
 <div id="footer">
     <ui:insert name="footer">
