--- a/Sopra/WebContent/WEB-INF/templates/anonymousHeader.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/anonymousHeader.xhtml
@@ -16,10 +16,10 @@
 				<div class="eingabeDiv"><input name = "password" type = "password" size = "30" maxlength = "30"></input></div>
 				<br class="naechsteZeile"/>
 				<input type="button" class="ueberschriftButtons" name="passwortvergessen" value="Passwort vergessen"></input>
-<!-- 				<input type="button" class="rechts ueberschriftButtons" name="loginButton" value="login"></input> -->
-				<h:form>
+                <input type="button" class="rechts ueberschriftButtons" name="loginButton" value="login"></input>
+				<!--<h:form>
 				<h:commandButton value="Dieter-Login" action="GOGOGO"></h:commandButton>
-				</h:form>
+				</h:form>-->
 			</div>
 		</div>
 	</div>
