--- a/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
@@ -6,8 +6,11 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
-  <h:outputStylesheet target="body" library="css" name="stylesheet2.css"  />
-  <h:outputStylesheet target="body" library="css" name="styleDropdown.css"  />
+  <h:outputStylesheet target="body" library="css" name="styleHauptfensterInhalt.css"  />
+  <h:outputStylesheet target="body" library="css" name="styleLogin.css"  />
+  <h:outputStylesheet target="body" library="css" name="styleMenueleisten.css"  />
+  <h:outputStylesheet target="body" library="css" name="styleUeberschrift.css"  />
+  
   <title><ui:insert name="title">MMS</ui:insert></title>
 </h:head>
 
@@ -19,10 +22,10 @@
     </ui:insert>
 </div>
 
-<div id="content">
-		<ui:insert name="seitenbereich">
- 		</ui:insert>
-</div>
+<div id="content">	
+			<ui:insert name="seitenbereich">
+	 		</ui:insert>
+			</div>	
 
 <div id="footer">
     <ui:insert name="footer">
