--- a/Sopra/WebContent/WEB-INF/templates/anonymousHeader.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/anonymousHeader.xhtml
@@ -17,9 +17,9 @@
 				<br class="naechsteZeile"/>
 				<input type="button" class="ueberschriftButtons" name="passwortvergessen" value="Passwort vergessen"></input>
                 <input type="button" class="rechts ueberschriftButtons" name="loginButton" value="login"></input>
-				<!--<h:form>
-				<h:commandButton value="Dieter-Login" action="GOGOGO"></h:commandButton>
-				</h:form>-->
+				<h:form>
+				<h:commandButton value="Dieter-Login" action="#{userBean.logMeIn}"></h:commandButton>
+				</h:form>
 			</div>
 		</div>
 	</div>
