--- a/Sopra/WebContent/WEB-INF/templates/header.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/header.xhtml
@@ -16,7 +16,7 @@
 						<!-- Zeigt das Usermenü an und liest den Usernamen aus der per Login befüllten UserBean Klasse -->
 						<li><a href="#"><h:graphicImage value="/resources/images/ich.png"></h:graphicImage>#{userBean.myName}</a>							
 							<ul>
-								<h3>#{user.name}</h3>
+								<h3>#{userBean.myself.vorname} #{userBean.myself.name}</h3>
 								<a href="#"><li>Benachrichtigungen</li></a>
 								<a href="benutzerdatenAendern.xhtml"><li>Benutzerdaten ändern</li></a>
 								<a href="#"><li>Logout</li></a>
