--- a/Sopra/WebContent/WEB-INF/templates/anonymousBasicTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/anonymousBasicTemplate.xhtml
@@ -15,32 +15,32 @@
 
 <h:body>
 
-<div id="header">
+<h:panelGroup layout="block" id="header">
     <ui:insert name="header">
         <ui:include src="/WEB-INF/templates/anonymousHeader.xhtml"/>
     </ui:insert>
-</div>
+</h:panelGroup>
 
-<div id="content">
-		<div id = "seitenbereich">
-			<div id="cssmenu">
+<h:panelGroup layout="block" id="content">
+		<h:panelGroup layout="block" id = "seitenbereich">
+			<h:panelGroup layout="block" id="cssmenu">
 					<ul>
-					   <li><a href='#'>Modul betrachten</a></li>
-					   <li><a href='#'>Modulhandbuch</a></li>
-					   <li><a href='#'>Modulssuche</a></li>
+					   <li><h:link>Modul betrachten</h:link></li>
+					   <li><h:link>Modulhandbuch</h:link></li>
+					   <li><h:link>Modulssuche</h:link></li>
 					</ul>
-				</div>
-		</div>	
+				</h:panelGroup>
+		</h:panelGroup>
 		
 		<ui:insert name="seitenbereich">
  		</ui:insert>
-</div>
+</h:panelGroup>
 
-<div id="footer">
+<h:panelGroup layout="block" id="footer">
     <ui:insert name="footer">
         <ui:include src="/WEB-INF/templates/footer.xhtml"/>
     </ui:insert>
-</div>
+</h:panelGroup>
 
 </h:body>
 </html>
