--- a/Sopra/WebContent/WEB-INF/templates/anonymousHeader.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/anonymousHeader.xhtml
@@ -5,24 +5,20 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:body>
-	<div id="seitenbereich">
-		<div id="top-nav">
+	<h:panelGroup layout="block" id="seitenbereich">
+		<h:panelGroup layout="block" id="top-nav">
 			<h:graphicImage value="/resources/images/logo.jpg"></h:graphicImage>
-			<div id="login">
-				<span class="text-info ueberschriftAufzaehlung">Name:</span>
-				<div class="eingabeDiv"><input name = "vorname" type = "text" size = "30" maxlength = "30"></input></div>
+			<h:panelGroup layout= "block" id="login">
+				<h:panelGroup styleClass="text-info ueberschriftAufzaehlung">Name:</h:panelGroup>
+				<h:panelGroup layout="block" styleClass="eingabeDiv"><h:inputText></h:inputText></h:panelGroup>
 				<br class="naechsteZeile"/>
-				<span class="text-info ueberschriftAufzaehlung">Passwort:</span>
-				<div class="eingabeDiv"><input name = "password" type = "password" size = "30" maxlength = "30"></input></div>
+				<h:panelGroup class="text-info ueberschriftAufzaehlung">Passwort:</h:panelGroup>
+				<h:panelGroup layout="block" styleClass="eingabeDiv"><h:inputSecret></h:inputSecret></h:panelGroup>
 				<br class="naechsteZeile"/>
-				<input type="button" class="ueberschriftButtons" name="passwortvergessen" value="Passwort vergessen"></input>
-                <input type="button" class="rechts ueberschriftButtons" name="loginButton" value="login"></input>
-				<h:form>
-				<h:commandButton value="Dieter-Login" action="#{userBean.logMeIn}"></h:commandButton>
-				</h:form>
-			</div>
-		</div>
-	</div>
-	<!-- <div style="width:100%;font-size:36px;line-height:48px;background-color:navy;color:white">My Facelet Application</div> -->
+				<h:button styleClass="ueberschriftButtons" value="Passwort vergessen"></h:button>
+                <h:commandButton styleClass="rechts ueberschriftButtons" value="login"></h:commandButton>
+			</h:panelGroup>
+		</h:panelGroup>
+	</h:panelGroup>
 </h:body>
 </html>
