--- a/Sopra/WebContent/WEB-INF/templates/footer.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/footer.xhtml
@@ -6,10 +6,10 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>Insert title here</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+	<title>Insert title here</title>
 </h:head>
 <h:body>
-<div style="background-color:navy;width:100%;color:white"></div>
+	<h:panelGroup layout="block" style="background-color:navy;width:100%;color:white"></h:panelGroup>
 </h:body>
 </html>
