--- a/Sopra/WebContent/WEB-INF/templates/header.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/header.xhtml
@@ -7,26 +7,26 @@
 <h:body>
   <h:outputStylesheet target="body" library="css" name="styleDropdown.css"  />
 
-	<div id="seitenbereich">
-		<div id="top-nav">
+	<h:panelGroup layout="block" id="seitenbereich">
+		<h:panelGroup layout="block" id="top-nav">
 		<h:graphicImage value="/resources/images/logo.jpg"></h:graphicImage>
-			<div id="login">
-				<div id="menu">
+			<h:panelGroup layout="block" id="login">
+				<h:panelGroup layout="block" id="menu">
 					<ul>
+					<li>
 						<!-- Zeigt das Usermenü an und liest den Usernamen aus der per Login befüllten UserBean Klasse -->
-						<li><a href="#"><h:graphicImage value="/resources/images/ich.png"></h:graphicImage>#{userBean.myName}</a>							
+<!-- 						<li><h:link><h:graphicImage value="/resources/images/ich.png"></h:graphicImage>#{userBean.myself.vorname} #{userBean.myself.name}</h:link> -->
 							<ul>
-								<h3>#{userBean.myself.vorname} #{userBean.myself.name}</h3>
-								<a href="#"><li>Benachrichtigungen</li></a>
-								<a href="benutzerdatenAendern.xhtml"><li>Benutzerdaten ändern</li></a>
-								<a href="#"><li>Logout</li></a>
+<!-- 								<h3>#{userBean.myself.vorname}</h3> -->
+								<h:link><li>Benachrichtigungen</li></h:link>
+								<h:link outcome = "benutzerdatenAendern"><li>Benutzerdaten ändern</li></h:link>
+								<h:link><li>Logout</li></h:link>
 							</ul>
 						</li>
 					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- <div style="width:100%;font-size:36px;line-height:48px;background-color:navy;color:white">My Facelet Application</div> -->
-</h:body>
+				</h:panelGroup>
+			</h:panelGroup>
+		</h:panelGroup>
+	</h:panelGroup>
+	</h:body>
 </html>
