--- a/Sopra/WebContent/WEB-INF/templates/DezernatTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/DezernatTemplate.xhtml
@@ -23,8 +23,8 @@
 </h:panelGroup>
 
 <h:panelGroup layout="block" id="content">
-			<h:panelGroup layout="block" id = "seitenbereich">
-				<h:panelGroup layout="block" id='cssmenuDezernat'>
+			<h:panelGroup layout="block" styleClass = "seitenbereich">
+				<h:panelGroup layout="block" styleClass='cssmenuDezernat'>
 					<ul>
 					   <li class='active'><h:link>Modul betrachten</h:link></li>
 					   <li><h:link>Modulhandbuch</h:link></li>
