--- a/Sopra/WebContent/WEB-INF/templates/anonymousBasicTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/anonymousBasicTemplate.xhtml
@@ -22,8 +22,8 @@
 </h:panelGroup>
 
 <h:panelGroup layout="block" id="content">
-		<h:panelGroup layout="block" id = "seitenbereich">
-			<h:panelGroup layout="block" id="cssmenu">
+		<h:panelGroup layout="block" styleClass = "seitenbereich">
+			<h:panelGroup layout="block" styleClass="cssmenu">
 					<ul>
 					   <li><h:link>Modul betrachten</h:link></li>
 					   <li><h:link>Modulhandbuch</h:link></li>
