--- a/Sopra/WebContent/WEB-INF/templates/anonymousHeader.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/anonymousHeader.xhtml
@@ -5,14 +5,14 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:body>
-	<h:panelGroup layout="block" id="seitenbereich">
-		<h:panelGroup layout="block" id="top-nav">
+	<h:panelGroup layout="block" styleClass="seitenbereich">
+		<h:panelGroup layout="block" styleClass="top-nav">
 			<h:graphicImage value="/resources/images/logo.jpg"></h:graphicImage>
-			<h:panelGroup layout= "block" id="login">
+			<h:panelGroup layout= "block" styleClass="login">
 				<h:panelGroup styleClass="text-info ueberschriftAufzaehlung">Name:</h:panelGroup>
 				<h:panelGroup layout="block" styleClass="eingabeDiv"><h:inputText></h:inputText></h:panelGroup>
 				<br class="naechsteZeile"/>
-				<h:panelGroup class="text-info ueberschriftAufzaehlung">Passwort:</h:panelGroup>
+				<h:panelGroup styleClass="text-info ueberschriftAufzaehlung">Passwort:</h:panelGroup>
 				<h:panelGroup layout="block" styleClass="eingabeDiv"><h:inputSecret></h:inputSecret></h:panelGroup>
 				<br class="naechsteZeile"/>
 				<h:button styleClass="ueberschriftButtons" value="Passwort vergessen"></h:button>
