--- a/Sopra/WebContent/resources/css/styleMenueleisten.css
+++ b/Sopra/WebContent/resources/css/styleMenueleisten.css
@@ -1,17 +1,17 @@
 /*Menüleiste welcome*/
-#cssmenu {
+.cssmenu {
 	height: 35px;
 	margin-top: 80px;			/*äußere Abstand zum Seitenbereich*/
 	padding: 0;					/*innerer Abstand zu inneren tags*/
 	background-color: #c6daea;
 }
-#cssmenu ul {
+.cssmenu ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	margin-top: 7px;
 }
-#cssmenu ul li {
+.cssmenu ul li {
 	font-family: arial;
 	font-size: 15px;
 	float: left;
@@ -21,7 +21,7 @@
 	border-right: black 1px solid;
 }
 
-#cssmenu ul li a {
+.cssmenu ul li a {
 	display: block;
 	float: left;
 	padding-top: 7px;
@@ -33,26 +33,26 @@
 	padding-left: 35px;
 }
 
-#cssmenu ul li:hover,
-#cssmenu ul li.active {
+.cssmenu ul li:hover,
+.cssmenu ul li.active {
 	background-color:rgb(144,169,189);;
 }
 
 /*Menüleiste für Admin*/
-#cssmenuAdmin {
+.cssmenuAdmin {
 	height: 35px;
 	margin-top: 80px;			/*äußere Abstand zum Seitenbereich*/
 	padding: 0;					/*innerer Abstand zu inneren tags*/
 	background-color: #c6daea;
 }
 
-#cssmenuAdmin ul {
+.cssmenuAdmin ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	margin-top: 7px;
 }
-#cssmenuAdmin ul li {
+.cssmenuAdmin ul li {
 	font-family: arial;
 	font-size: 15px;
 	float: left;
@@ -62,7 +62,7 @@
 	border-right: black 1px solid;
 }
 
-#cssmenuAdmin ul li a {
+.cssmenuAdmin ul li a {
 	display: block;
 	float: left;
 	padding-top: 7px;
@@ -75,26 +75,26 @@
 	padding-left: 31.5px;
 }
 
-#cssmenuAdmin ul li:hover,
-#cssmenuAdmin ul li.active {
+.cssmenuAdmin ul li:hover,
+.cssmenuAdmin ul li.active {
 	background-color:rgb(144,169,189);;
 }
 
 /*Menüleiste für Modulverantwortlicher*/
-#cssmenuModulverantwortlicher {
+.cssmenuModulverantwortlicher {
 	height: 35px;
 	margin-top: 80px;			/*äußere Abstand zum Seitenbereich*/
 	padding: 0;					/*innerer Abstand zu inneren tags*/
 	background-color: #c6daea;
 }
 
-#cssmenuModulverantwortlicher ul {
+.cssmenuModulverantwortlicher ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	margin-top: 7px;
 }
-#cssmenuModulverantwortlicher ul li {
+.cssmenuModulverantwortlicher ul li {
 	font-family: arial;
 	font-size: 15px;
 	float: left;
@@ -104,7 +104,7 @@
 	border-right: black 1px solid;
 }
 
-#cssmenuModulverantwortlicher ul li a {
+.cssmenuModulverantwortlicher ul li a {
 	display: block;
 	float: left;
 	padding-top: 7px;
@@ -116,26 +116,26 @@
 	padding-left: 37px;
 }
 
-#cssmenuModulverantwortlicher ul li:hover,
-#cssmenuModulverantwortlicher ul li.active {
+.cssmenuModulverantwortlicher ul li:hover,
+.cssmenuModulverantwortlicher ul li.active {
 	background-color:rgb(144,169,189);;
 }
 
 /*Menüleiste für Dezernat*/
-#cssmenuDezernat {
+.cssmenuDezernat {
 	height: 35px;
 	margin-top: 80px;			/*äußere Abstand zum Seitenbereich*/
 	padding: 0;					/*innerer Abstand zu inneren tags*/
 	background-color: #c6daea;
 }
 
-#cssmenuDezernat ul {
+.cssmenuDezernat ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	margin-top: 7px;
 }
-#cssmenuDezernat ul li {
+.cssmenuDezernat ul li {
 	font-family: arial;
 	font-size: 15px;
 	float: left;
@@ -145,7 +145,7 @@
 	border-right: black 1px solid;
 }
 
-#cssmenuDezernat ul li a {
+.cssmenuDezernat ul li a {
 	display: block;
 	float: left;
 	padding-top: 7px;
@@ -157,26 +157,26 @@
 	padding-left: 35px;
 }
 
-#cssmenuDezernat ul li:hover,
-#cssmenuDezernat ul li.active {
+.cssmenuDezernat ul li:hover,
+.cssmenuDezernat ul li.active {
 	background-color:rgb(144,169,189);;
 }
 
 /*Menüleiste für Studiendekan*/
-#cssmenuStudiendekan {
+.cssmenuStudiendekan {
 	height: 35px;
 	margin-top: 80px;			/*äußere Abstand zum Seitenbereich*/
 	padding: 0;					/*innerer Abstand zu inneren tags*/
 	background-color: #c6daea;
 }
 
-#cssmenuStudiendekan ul {
+.cssmenuStudiendekan ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	margin-top: 7px;
 }
-#cssmenuStudiendekan ul li {
+.cssmenuStudiendekan ul li {
 	font-family: arial;
 	font-size: 15px;
 	float: left;
@@ -186,7 +186,7 @@
 	border-right: black 1px solid;
 }
 
-#cssmenuStudiendekan ul li a {
+.cssmenuStudiendekan ul li a {
 	display: block;
 	float: left;
 	padding-top: 7px;
@@ -198,7 +198,7 @@
 	padding-left: 12px;
 }
 
-#cssmenuStudiendekan ul li:hover,
-#cssmenuStudiendekan ul li.active {
+.cssmenuStudiendekan ul li:hover,
+.cssmenuStudiendekan ul li.active {
 	background-color:rgb(144,169,189);;
 }
