Automatische accouterkennung und login

--- a/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
@@ -22,7 +22,70 @@
     </ui:insert>
 </h:panelGroup>
 
-<h:panelGroup layout="block" id="content">	
+<h:panelGroup layout="block" id="content">
+	<h:panelGroup rendered="#{userBean.myself!=null}">
+			<h:panelGroup rendered="#{userBean.myself.rolle==3}" layout="block" styleClass = "seitenbereich">
+				<h:panelGroup layout="block" styleClass='cssmenuAdmin'>
+					<ul>
+					   <li class='active'><h:link>Modul betrachten</h:link></li>
+					   <li><h:link>Modulhandbuch</h:link></li>
+					   <li><h:link outcome = "modulsuche">Modul suchen</h:link></li>
+					   <li><h:link>Benutzer anlegen</h:link></li>
+					   <li><h:link>Benutzer löschen</h:link></li>
+					   <li><h:link>Rechteverwaltung</h:link></li>
+					</ul>
+				</h:panelGroup>
+			</h:panelGroup>
+			<h:panelGroup rendered="#{userBean.myself.rolle==0}" layout="block" styleClass = "seitenbereich">
+				<h:panelGroup layout="block" styleClass='cssmenuModulverantwortlicher'>
+					<ul>
+					   <li class='active'><h:link>Modul betrachten</h:link></li>
+					   <li><h:link>Modulhandbuch</h:link></li>
+					   <li><h:link outcome = "modulsuche">Modul suchen</h:link></li>
+					   <li><h:link>Modul erstellen</h:link></li>
+					   <li><h:link>Modul löschen</h:link></li>
+					   <li><h:link>Modul ändern</h:link></li>
+					</ul>
+				</h:panelGroup>
+			</h:panelGroup>
+			<h:panelGroup rendered="#{userBean.myself.rolle==1}" layout="block" styleClass = "seitenbereich">
+				<h:panelGroup layout="block" styleClass='cssmenuModulverantwortlicher'>
+					<ul>
+					   <li class='active'><h:link>Modul betrachten</h:link></li>
+					   <li><h:link>Modulhandbuch</h:link></li>
+					   <li><h:link outcome = "modulsuche">Modul suchen</h:link></li>
+					   <li><h:link>Modul erstellen</h:link></li>
+					   <li><h:link>Modul löschen</h:link></li>
+					   <li><h:link>Modul ändern</h:link></li>
+					</ul>
+				</h:panelGroup>
+			</h:panelGroup>
+			<h:panelGroup rendered="#{userBean.myself.rolle==2}" layout="block" styleClass = "seitenbereich">
+				<h:panelGroup layout="block" styleClass='cssmenuStudiendekan'>
+					<ul>
+					   <li class='active'><h:link>Modul betrachten</h:link></li>
+					   <li><h:link>Modulhandbuch</h:link></li>
+					   <li><h:link outcome = "modulsuche">Modul suchen</h:link></li>
+					   <li><h:link>Modul ändern</h:link></li>
+					   <li><h:link>Modul löschen</h:link></li>
+					   <li><h:link>Stichtag setzen</h:link></li>
+					   <li><h:link>Modul weiterleiten</h:link></li>
+					    <li><h:link>Modul übernehmen</h:link></li>
+					</ul>
+				</h:panelGroup>
+			</h:panelGroup>
+	</h:panelGroup>
+	<h:panelGroup rendered="#{userBean.myself==null}">
+	 		<h:panelGroup layout="block" styleClass = "seitenbereich">
+				<h:panelGroup layout="block" styleClass="cssmenu">
+					<ul>
+					   <li class='active'><h:link>Modul betrachten</h:link></li>
+					   <li><h:link>Modulhandbuch</h:link></li>
+					   <li><h:link outcome = "modulsuche">Modulssuche</h:link></li>
+					</ul>
+				</h:panelGroup>			
+	   		</h:panelGroup>
+	</h:panelGroup>
 	<ui:insert name="seitenbereich">
 	</ui:insert>
 </h:panelGroup>
