--- a/Sopra/WebContent/WEB-INF/templates/header.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/header.xhtml
@@ -5,27 +5,39 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:body>
-  <h:outputStylesheet target="body" library="css" name="styleDropdown.css"  />
-
 	<h:panelGroup layout="block" styleClass="seitenbereich">
 		<h:panelGroup layout="block" styleClass="top-nav">
-		<h:graphicImage value="/resources/images/logo.jpg"></h:graphicImage>
-			<h:panelGroup layout="block" styleClass="login">
+			<h:graphicImage value="/resources/images/logo.jpg"></h:graphicImage>
+			<h:panelGroup rendered="#{userBean.myself==null}" layout= "block" styleClass="login">
+				<h:form>
+					<h:panelGroup styleClass="text-info ueberschriftAufzaehlung">Name:</h:panelGroup>
+					<h:panelGroup layout="block" styleClass="eingabeDiv"><h:inputText value="#{userBean.email}"></h:inputText></h:panelGroup>
+					<br class="naechsteZeile"/>
+					<h:panelGroup styleClass="text-info ueberschriftAufzaehlung">Passwort:</h:panelGroup>
+					<h:panelGroup layout="block" styleClass="eingabeDiv"><h:inputSecret value="#{userBean.passwort}"></h:inputSecret></h:panelGroup>
+					<br class="naechsteZeile"/>
+					<h:button styleClass="ueberschriftButtons" value="Passwort vergessen"></h:button>
+	                <h:commandButton styleClass="rechts ueberschriftButtons" value="login" action="#{userBean.logMeIn}"></h:commandButton>
+				</h:form>
+			</h:panelGroup>
+			<h:panelGroup rendered="#{userBean.myself!=null}" layout="block" styleClass="login">
 				<h:panelGroup layout="block" styleClass="menu">
-					<ul>
-						<!-- Zeigt das Usermenü an und liest den Usernamen aus der per Login befüllten UserBean Klasse -->
-						<li><h:link><h:graphicImage value="/resources/images/ich.png"></h:graphicImage>#{userBean.myself.vorname} #{userBean.myself.name}</h:link>
-							<ul>
-						<h3></h3>
-								<h:link><li>Benachrichtigungen</li></h:link>
-								<h:link outcome = "benutzerdatenAendern"><li>Benutzerdaten ändern</li></h:link>
-								<h:link><li>Logout</li></h:link>
-							</ul>
-						</li>
-					</ul>
+					<h:form>
+						<ul>
+							<!-- Zeigt das Usermenü an und liest den Usernamen aus der per Login befüllten UserBean Klasse -->
+							<li><h:link><h:graphicImage value="/resources/images/ich.png"></h:graphicImage>#{userBean.myself.vorname} #{userBean.myself.name}</h:link>
+								<ul>
+							<h3></h3>
+									<h:link><li>Benachrichtigungen</li></h:link>
+									<h:link outcome = "benutzerdatenAendern"><li>Benutzerdaten ändern</li></h:link>
+					                <h:commandLink  action="#{userBean.logout}"><li>logout</li></h:commandLink>
+								</ul>
+							</li>
+						</ul>
+					</h:form>
 				</h:panelGroup>
 			</h:panelGroup>
 		</h:panelGroup>
 	</h:panelGroup>
-	</h:body>
+</h:body>
 </html>
