--- a/Sopra/WebContent/resources/css/styleHauptfensterInhalt.css
+++ b/Sopra/WebContent/resources/css/styleHauptfensterInhalt.css
@@ -158,3 +158,33 @@ width: 210px;}
 	width: 100%;
 }
 
+/*Hauptfenster suchergebnis*/
+
+.order-table{   
+	color: rgb(144,169,189);
+	font-family:arial;
+	font-size:17px;
+	
+}
+ 
+.order-table-header{
+	text-align:center;
+	/*background:none repeat scroll 0 0 #E5E5E5; */
+	/*border-bottom:1px solid #BBBBBB; */
+	/*padding:16px; */
+		
+}
+ 
+.order-table-odd-row{
+	/* text-align:center;
+	background:none repeat scroll 0 0 #FFFFFFF;
+	border-top:1px solid #BBBBBB; */
+	
+}
+ 
+.order-table-even-row{
+	/* text-align:center;
+	background:none repeat scroll 0 0 #F9F9F9;
+	border-top:1px solid #BBBBBB; */
+}
+
