--- a/Sopra/WebContent/WEB-INF/templates/header.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/header.xhtml
@@ -16,7 +16,7 @@
 					<h:panelGroup styleClass="text-info ueberschriftAufzaehlung">Passwort:</h:panelGroup>
 					<h:panelGroup layout="block" styleClass="eingabeDiv"><h:inputSecret value="#{userBean.passwort}"></h:inputSecret></h:panelGroup>
 					<br class="naechsteZeile"/>
-					<h:button styleClass="ueberschriftButtons" value="Passwort vergessen"></h:button>
+					<h:button styleClass="ueberschriftButtons" value="Passwort vergessen" outcome="passwortVergessen"></h:button>
 	                <h:commandButton styleClass="rechts ueberschriftButtons" value="login" action="#{userBean.logMeIn}"></h:commandButton>
 				</h:form>
 			</h:panelGroup>
@@ -28,7 +28,7 @@
 							<li><h:link><h:graphicImage value="/resources/images/ich.png"></h:graphicImage>#{userBean.myself.vorname} #{userBean.myself.name}</h:link>
 								<ul>
 							<h3></h3>
-									<h:link><li>Benachrichtigungen</li></h:link>
+									<h:link outcome = "benachrichtigungenLoeschen"><li>Benachrichtigungen</li></h:link>
 									<h:link outcome = "benutzerdatenAendern"><li>Benutzerdaten ändern</li></h:link>
 					                <h:commandLink  action="#{userBean.logout}"><li>logout</li></h:commandLink>
 								</ul>
