--- a/Sopra/WebContent/WEB-INF/templates/header.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/header.xhtml
@@ -29,7 +29,7 @@
 								<ul>
 							<h3></h3>
 									<h:link><li>Benachrichtigungen</li></h:link>
-									<h:link outcome = "benutzerdatenAendern"><li>Benutzerdaten ändern</li></h:link>
+									<h:link outcome = "benutzerdatenAendern"><li>Benutzerdaten &auml;ndern</li></h:link>
 					                <h:commandLink  action="#{userBean.logout}"><li>logout</li></h:commandLink>
 								</ul>
 							</li>
