neue xhtml seiten erstellt

--- a/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
@@ -28,11 +28,11 @@
 				<h:panelGroup layout="block" styleClass='cssmenuAdmin'>
 					<ul>
 					   <li class="#{view.viewId == '/login.xhtml' ? 'active' : ''}"><h:link outcome = "login">Modul betrachten</h:link></li>
-					   <li><h:link>Modulhandbuch</h:link></li>
+					   <li class="#{view.viewId == '/modulhandbuch.xhtml' ? 'active' : ''}"><h:link outcome = "modulhandbuch">Modulhandbuch</h:link></li>
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
-					   <li><h:link>Benutzer anlegen</h:link></li>
+					   <li class="#{view.viewId == '/benutzerAnlegen.xhtml' ? 'active' : ''}"><h:link outcome = "benutzerAnlegen">Benutzer anlegen</h:link></li>
 					   <li class="#{view.viewId == '/benutzerLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "benutzerLoeschen">Benutzer löschen</h:link></li>
-					   <li><h:link>Rechteverwaltung</h:link></li>
+					   <li class="#{view.viewId == '/rechteverwaltung.xhtml' ? 'active' : ''}"><h:link outcome = "rechteverwaltung">Rechteverwaltung</h:link></li>
 					</ul>
 				</h:panelGroup>
 			</h:panelGroup>
@@ -40,11 +40,11 @@
 				<h:panelGroup layout="block" styleClass='cssmenuModulverantwortlicher'>
 					<ul>
 					   <li class="#{view.viewId == '/login.xhtml' ? 'active' : ''}"><h:link outcome = "login">Modul betrachten</h:link></li>
-					   <li><h:link>Modulhandbuch</h:link></li>
+					   <li class="#{view.viewId == '/modulhandbuch.xhtml' ? 'active' : ''}"><h:link outcome = "modulhandbuch">Modulhandbuch</h:link></li>
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
 					   <li class="#{view.viewId == '/modulErstellen.xhtml' ? 'active' : ''}"><h:link outcome = "modulErstellen">Modul erstellen</h:link></li>
 					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "modulLoeschen">Modul löschen</h:link></li>
-					   <li><h:link>Modul ändern</h:link></li>
+					   <li class="#{view.viewId == '/modulAendern.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern">Modul ändern</h:link></li>
 					</ul>
 				</h:panelGroup>
 			</h:panelGroup>
@@ -52,11 +52,11 @@
 				<h:panelGroup layout="block" styleClass='cssmenuModulverantwortlicher'>
 					<ul>
 					   <li class="#{view.viewId == '/login.xhtml' ? 'active' : ''}"><h:link outcome = "login">Modul betrachten</h:link></li>
-					   <li><h:link>Modulhandbuch</h:link></li>
+					   <li class="#{view.viewId == '/modulhandbuch.xhtml' ? 'active' : ''}"><h:link outcome = "modulhandbuch">Modulhandbuch</h:link></li>
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
 					   <li class="#{view.viewId == '/modulErstellen.xhtml' ? 'active' : ''}"><h:link outcome = "modulErstellen">Modul erstellen</h:link></li>
 					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "modulLoeschen">Modul löschen</h:link></li>
-					   <li><h:link>Modul ändern</h:link></li>
+					   <li class="#{view.viewId == '/modulAendern.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern">Modul ändern</h:link></li>
 					</ul>
 				</h:panelGroup>
 			</h:panelGroup>
@@ -64,13 +64,13 @@
 				<h:panelGroup layout="block" styleClass='cssmenuStudiendekan'>
 					<ul>
 					   <li class="#{view.viewId == '/login.xhtml' ? 'active' : ''}"><h:link outcome = "login">Modul betrachten</h:link></li>
-					   <li><h:link>Modulhandbuch</h:link></li>
+					   <li class="#{view.viewId == '/modulhandbuch.xhtml' ? 'active' : ''}"><h:link outcome = "modulhandbuch">Modulhandbuch</h:link></li>
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
-					   <li><h:link>Modul ändern</h:link></li>
+					   <li class="#{view.viewId == '/modulAendern.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern">Modul ändern</h:link></li>
 					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "modulLoeschen">Modul löschen</h:link></li>
-					   <li><h:link>Stichtag setzen</h:link></li>
-					   <li><h:link>Modul weiterleiten</h:link></li>
-					    <li><h:link>Modul übernehmen</h:link></li>
+					   <li class="#{view.viewId == '/stichtagSetzen.xhtml' ? 'active' : ''}"><h:link outcome = "stichtagSetzen">Stichtag setzen</h:link></li>
+					   <li class="#{view.viewId == '/modulWeiterleiten.xhtml' ? 'active' : ''}"><h:link outcome = "modulWeiterleiten">Modul weiterleiten</h:link></li>
+					   <li class="#{view.viewId == '/modulUebernehmen.xhtml' ? 'active' : ''}"><h:link outcome = "modulUebernehmen">Modul übernehmen</h:link></li>
 					</ul>
 				</h:panelGroup>
 			</h:panelGroup>
@@ -80,7 +80,7 @@
 				<h:panelGroup layout="block" styleClass="cssmenu">
 					<ul>
 					   <li class="#{view.viewId == '/login.xhtml' ? 'active' : ''}"><h:link outcome = "login">Modul betrachten</h:link></li>
-					   <li ><h:link>Modulhandbuch</h:link></li>
+					   <li class="#{view.viewId == '/modulhandbuch.xhtml' ? 'active' : ''}"><h:link outcome = "modulhandbuch">Modulhandbuch</h:link></li>
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modulssuche</h:link></li>
 					</ul>
 				</h:panelGroup>			
