--- a/Sopra/WebContent/WEB-INF/templates/header.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/header.xhtml
@@ -7,10 +7,10 @@
 <h:body>
 	<h:panelGroup layout="block" styleClass="seitenbereich">
 		<h:panelGroup layout="block" styleClass="top-nav">
-			<h:graphicImage value="/resources/images/logo.jpg"></h:graphicImage>
+			<h:link outcome="login"><h:graphicImage value="/resources/images/logo.jpg"></h:graphicImage></h:link>
 			<h:panelGroup rendered="#{userBean.myself==null}" layout= "block" styleClass="login">
 				<h:form>
-					<h:panelGroup styleClass="text-info ueberschriftAufzaehlung">Name:</h:panelGroup>
+					<h:panelGroup styleClass="text-info ueberschriftAufzaehlung">E-Mail:</h:panelGroup>
 					<h:panelGroup layout="block" styleClass="eingabeDiv"><h:inputText value="#{userBean.email}"></h:inputText></h:panelGroup>
 					<br class="naechsteZeile"/>
 					<h:panelGroup styleClass="text-info ueberschriftAufzaehlung">Passwort:</h:panelGroup>
@@ -27,7 +27,7 @@
 							<!-- Zeigt das Usermenü an und liest den Usernamen aus der per Login befüllten UserBean Klasse -->
 							<li><h:link><h:graphicImage value="/resources/images/ich.png"></h:graphicImage>#{userBean.myself.vorname} #{userBean.myself.name}</h:link>
 								<ul>
-							<h3></h3>
+									<h3></h3>
 									<h:link outcome = "benachrichtigungenLoeschen"><li>Benachrichtigungen</li></h:link>
 									<h:link outcome = "benutzerdatenAendern"><li>Benutzerdaten &auml;ndern</li></h:link>
 					                <h:commandLink  action="#{userBean.logout}"><li>logout</li></h:commandLink>
