pdf und rechteverwaltung

--- a/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
@@ -32,7 +32,7 @@
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
 					   <li class="#{view.viewId == '/benutzerAnlegen.xhtml' ? 'active' : ''}"><h:link outcome = "benutzerAnlegen">Benutzer anlegen</h:link></li>
 					   <li class="#{view.viewId == '/benutzerLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "benutzerLoeschen">Benutzer löschen</h:link></li>
-					   <li class="#{view.viewId == '/rechteverwaltung.xhtml' ? 'active' : ''}"><h:link outcome = "rechteverwaltung">Rechteverwaltung</h:link></li>
+					   <li class="#{view.viewId == '/rechteverwaltung1.xhtml' ? 'active' : ''}"><h:link outcome = "rechteverwaltung1">Rechteverwaltung</h:link></li>
 					</ul>
 				</h:panelGroup>
 			</h:panelGroup>
