--- a/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
+++ b/Sopra/WebContent/WEB-INF/templates/BasicTemplate.xhtml
@@ -44,7 +44,7 @@
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
 					   <li class="#{view.viewId == '/modulErstellen.xhtml' ? 'active' : ''}"><h:link outcome = "modulErstellen">Modul erstellen</h:link></li>
 					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "modulLoeschen">Modul löschen</h:link></li>
-					   <li class="#{view.viewId == '/modulAendern.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern">Modul ändern</h:link></li>
+					   <li class="#{view.viewId == '/modulAendern1.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern1">Modul ändern</h:link></li>
 					</ul>
 				</h:panelGroup>
 			</h:panelGroup>
@@ -56,7 +56,7 @@
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
 					   <li class="#{view.viewId == '/modulErstellen.xhtml' ? 'active' : ''}"><h:link outcome = "modulErstellen">Modul erstellen</h:link></li>
 					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "modulLoeschen">Modul löschen</h:link></li>
-					   <li class="#{view.viewId == '/modulAendern.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern">Modul ändern</h:link></li>
+					   <li class="#{view.viewId == '/modulAendern1.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern1">Modul ändern</h:link></li>
 					</ul>
 				</h:panelGroup>
 			</h:panelGroup>
@@ -66,7 +66,7 @@
 					   <li class="#{view.viewId == '/login.xhtml' ? 'active' : ''}"><h:link outcome = "login">Modul betrachten</h:link></li>
 					   <li class="#{view.viewId == '/modulhandbuch.xhtml' ? 'active' : ''}"><h:link outcome = "modulhandbuch">Modulhandbuch</h:link></li>
 					   <li class="#{view.viewId == '/modulsuche.xhtml' ? 'active' : ''}"><h:link outcome = "modulsuche">Modul suchen</h:link></li>
-					   <li class="#{view.viewId == '/modulAendern.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern">Modul ändern</h:link></li>
+					   <li class="#{view.viewId == '/modulAendern1.xhtml' ? 'active' : ''}"><h:link outcome = "modulAendern1">Modul ändern</h:link></li>
 					   <li class="#{view.viewId == '/modulLoeschen.xhtml' ? 'active' : ''}"><h:link outcome = "modulLoeschen">Modul löschen</h:link></li>
 					   <li class="#{view.viewId == '/stichtagSetzen.xhtml' ? 'active' : ''}"><h:link outcome = "stichtagSetzen">Stichtag setzen</h:link></li>
 					   <li class="#{view.viewId == '/modulWeiterleiten.xhtml' ? 'active' : ''}"><h:link outcome = "modulWeiterleiten">Modul weiterleiten</h:link></li>
