--- a/Sopra/WebContent/resources/css/styleMenueleisten.css
+++ b/Sopra/WebContent/resources/css/styleMenueleisten.css
@@ -68,7 +68,6 @@
 	padding-top: 7px;
 	height: 35px;
 	padding-right: 30px;
-	padding-right: 30px;
 	cursor: pointer;
 	text-decoration:none;
 	color: black;
@@ -191,14 +190,58 @@
 	float: left;
 	padding-top: 7px;
 	height: 12px;
-	padding-right: 12px;
+	padding-right: 7px;
 	cursor: pointer;
 	text-decoration:none;
 	color: black;
-	padding-left: 12px;
+	padding-left: 7px;
 }
 
 .cssmenuStudiendekan ul li:hover,
 .cssmenuStudiendekan ul li.active {
+	background-color:rgb(144,169,189);;
+}
+
+
+/*Menüleiste für Koordinator*/      /*HINZUGEFÜGT*/
+
+
+.cssmenuKoordinator {
+	height: 35px;
+	margin-top: 80px;			/*äußere Abstand zum Seitenbereich*/
+	padding: 0;					/*innerer Abstand zu inneren tags*/
+	background-color: #c6daea;
+}
+
+.cssmenuKoordinator ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	margin-top: 7px;
+}
+.cssmenuKoordinator ul li {
+	font-family: arial;
+	font-size: 15px;
+	float: left;
+	height: 35px;
+	margin: 0;
+	padding: 0;
+	border-right: black 1px solid;
+}
+
+.cssmenuKoordinator ul li a {
+	display: block;
+	float: left;
+	padding-top: 7px;
+	height: 12px;
+	padding-right: 36px;
+	cursor: pointer;
+	text-decoration:none;
+	color: black;
+	padding-left: 37px;
+}
+
+.cssmenuKoordinator ul li:hover,
+.cssmenuKoordinator ul li.active {
 	background-color:rgb(144,169,189);;
 }
